--- a/mybatis-common-dao/src/main/resources/application.properties
+++ b/mybatis-common-dao/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc_driver=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://114.55.218.172/ddc?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-jdbc_username=dep_ddc
-jdbc_password=dep_ddc@2017
+jdbc_url=jdbc:mysql://127.0.0.1/ddc?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc_username=root
+jdbc_password=aaa
 
 #datasource connection pool settings
 #初始化连接大小
